# iota.c

./: .bazelrc  .clang-format  .cmake_format.yaml  .gitignore  .mbedignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  README.md  WORKSPACE  library.json  library.properties
benchmark/: CMakeLists.txt  README.md  benchmark_config.h  measure_heap_consumers.py  run_benchmark.sh
benchmark/client/: send_tagged_data.c  send_tagged_data_max.c
benchmark/core/: create_transaction_basic_output.c  create_transaction_basic_output_full.c  create_transaction_basic_output_max.c
cclient/: doxy.txt  (+3 more)
examples/: CMakeLists.txt  README.md  data_message.c  encrypted_data.c  get_event_messages.c  get_message.c  get_mqtt_message.c  node_info.c  send_encrypted_data.c  send_indexation_msg.c  wallet_get_balance.c  wallet_list_addresses.c  wallet_send_tx.c
examples/arduino_esp32_info/: arduino_esp32_info.ino
examples/arduino_esp32_token_transfer/: arduino_esp32_token_transfer.ino
examples/client/: encrypted_data_message.c  encrypted_tagged_data_block.c  encrypted_tagged_data_message.c  get_block.c  get_event_blocks.c  get_event_messages.c  get_message.c  node_info.c  tagged_data_block.c  tagged_data_message.c
examples/wallet/: create_alias_output.c  mint_native_tokens.c  send_basic_output.c  send_native_tokens.c
functional-tests/: CMakeLists.txt  README.md  config.json  functional_app.c  functional_cases.c  functional_cases.h
src/: CMakeLists.txt  iota_c.h  iota_client.h
src/client/: CMakeLists.txt  client_service.h  constants.h
src/client/api/: get_message_hash.c  get_message_hash.h  get_node_info.c  get_node_info.h  get_tips.c  get_tips.h  json_keys.h  json_utils.c  json_utils.h  message.c  message.h  message_builder.c  message_builder.h  message_tx_outputs.c  message_tx_outputs.h  response_error.c  response_error.h  tx_outputs.c  tx_outputs.h
src/client/api/events/: node_event.c  node_event.h  sub_address_outputs.c  sub_address_outputs.h  sub_blocks_metadata.c  sub_blocks_metadata.h  sub_messages_metadata.c  sub_messages_metadata.h  sub_messages_referenced.c  sub_messages_referenced.h  sub_milestone_latest.c  sub_milestone_latest.h  sub_milestone_payload.c  sub_milestone_payload.h  sub_milestones_confirmed.c  sub_milestones_confirmed.h  (+4 more)
src/client/network/: http.h  http_buffer.c  http_buffer.h  http_curl.c  http_esp32.c  http_zephyr.c
src/core/: CMakeLists.txt  address.c  address.h  balance.c  balance.h  byte_cost_config.h  constants.h  iota_str.c  iota_str.h  seed.c  seed.h  types.h
src/core/models/: block.c  block.h  message.c  message.h  signing.c  signing.h  unlock_block.c  unlock_block.h  unlocks.c  unlocks.h
src/core/utils/: allocator.h  bech32.c  bech32.h  byte_buffer.c  byte_buffer.h  iota_str.c  iota_str.h  macros.h  slip10.c  slip10.h  uint256.c  uint256.h
src/crypto/: CMakeLists.txt  constants.h  iota_crypto.c  iota_crypto.h
src/network/: http.h  http_buffer.c  http_buffer.h  http_curl.c  http_esp32.c  http_linux.c
src/wallet/: CMakeLists.txt  bip39.c  bip39.h  output_alias.c  output_alias.h  output_basic.c  output_basic.h  output_foundry.c  output_foundry.h  wallet.c  wallet.h
src/wallet/wordlists/: README.md  chinese_simplified.h  chinese_traditional.h  czech.h  english.h  french.h  italian.h  japanese.h  korean.h  portuguese.h  spanish.h  word.h  wordlist_header.py
tests/: CMakeLists.txt  test_config.h  test_http.c
tests/client/: test_config.h  test_get_info.c  test_get_message_hash.c  test_get_tips.c  test_http.c  test_json.c  test_message_builder.c  test_response_error.c
tests/client/api_events/: events_test_config.h  test_address_outputs.c  test_blocks_events.c  test_messages_events.c  test_messages_referenced_event.c  test_milestones_confirmed_event.c  test_milestones_events.c  test_milestones_latest_event.c  test_outputs_payloads.c  test_serialized_blocks_events.c  test_serialized_messages_events.c  test_serialized_outputs.c
tests/client/api_json_parser/: test_alias_output.c  test_common.c  test_feat_blocks.c  test_features.c  test_inputs.c  test_native_tokens.c  test_output_alias.c  test_output_basic.c  test_output_extended.c  test_output_foundry.c  test_output_nft.c  test_outputs.c  test_unlock_blocks.c  test_unlock_conditions.c  test_unlocks.c
tests/client/api_restful/: test_block_children.c  test_block_meta.c  test_config.h  test_faucet_enqueue.c  test_find_message.c  test_get_block.c  test_get_health.c  test_get_info.c  test_get_message.c  test_get_milestone.c  test_get_output.c  test_get_tips.c  test_get_transaction_included_block.c  test_get_transaction_included_message.c  test_message_children.c  test_message_meta.c  test_outputs_from_address.c  test_outputs_from_alias_address.c  test_outputs_from_nft_address.c  test_outputs_id.c  test_send_block.c  test_send_message.c  test_send_tagged_data.c
tests/client/api_v1/: test_config.h  test_find_message.c  test_get_balance.c  test_get_health.c  test_get_info.c  test_get_message.c  test_get_output.c  test_get_tips.c  test_get_transaction_included_message.c  test_message_children.c  test_message_meta.c  test_outputs_from_address.c  test_outputs_from_alias_address.c  test_outputs_from_nft_address.c  test_response_error.c  test_send_message.c
tests/core/: slip10_vector.h  test_address.c  test_allocator.c  test_balance.c  test_block.c  test_byte_buffer.c  test_byte_cost_config.c  test_condition_blocks.c  test_feat_blocks.c  test_features.c  test_indexation.c  test_inputs.c  test_iota_str.c  test_message.c  test_native_tokens.c  test_output_alias.c  test_output_basic.c  test_output_extended.c  test_output_foundry.c  test_output_nft.c  test_outputs.c  test_slip10.c  test_storage_deposit.c  test_tagged_data.c  test_transaction.c  test_transaction_alias.c  test_transaction_nft.c  test_uint256.c  test_unlock_block.c  test_unlocks.c  test_utils_bech32.c  test_vectors.h
tests/crypto/: blake2b-kat.h  blake2b_data.h  ed25519_sign.input  ed25519_signature_edges.h  pbkdf2_vectors.h  pbkdf2_vectors.py  test_crypto.c  test_vectors.h
tests/wallet/: mnemonic_vectors.h  test_bip39.c  test_wallet.c
(+513 files in other folders)
